k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sarai
  labels:
    app.kubernetes.io/part-of: sarai-platform
